--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,13 @@ body {
     height: 200px;
 }
 
+.container{
+    margin: 0 auto;
+    max-width: 800px;
+    color: #4a4a4a;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
